# playgrround

./: .gitignore  Cargo.toml  README.md  helper.txt
base/: CMakeLists.txt  episod_state.txt
basic/: .gitignore  CMakeLists.txt  basic
basic/src/: BreadBaker.h  InventoryManager.h  PaymentProcessor.h  main.cpp
c_basic/: a.out  main.c
cpp_with_ts/: addon.cc  addon.d.ts  addon.js  addon_old_slower.cc  addon_optimization1.cc  addon_optimization2.cc  binding.gyp  decorateObject.ts  index.ts  package-lock.json  package.json  prefTest.ts  tsconfig.json  tyoes.d.ts
cs50.ai/: README.md
dsa/: Cargo.toml
electronics/: led_control_with_button.c  led_control_with_potentiometer.c  single_led_control_with_potentiometer.c
fp/: README.md  fn.go  fn_test.go  go.mod  main.go  main_test.go
githun_actions/: README.md
go_basic/: go.mod  main.go  main.go.res
go_mem/: .gitignore  README.md  go.mod  go_mem  main.go
graphics/: .gitignore  CMakeLists.txt  CMakePresets.json  episod_preset.txt
graphics/res/shaders/: Basic.shader
graphics/src/: main.cpp
grpc_ms/: Makefile  README.md  go.mod
gs_go/: README.md  docker-compose.yml  go.mod
helloworld/: .gitignore  CMakeCache.txt  CMakeLists.txt  HelloWorld.project  Makefile  cmake_install.cmake
linear_algebra/: basic.ipynb  linear_algebra.ipynb
llm/: Makefile  main  main.c
ml_go/: go.mod  go.sum  stats.go
neetcode150/: anagrame_test.go  contain_duplicates.go  go.mod  group_anagrame_test.go  product_of_array_except_self_test.go  top_k_frequent_test.go  twoSum_test.go
nest_a/: .gitignore  docker-compose.yml  (+3 more)
(+172 files in other folders)
